<resources>
    <string name="app_name">Trovebox</string>
    <string name="loading">Loading&#8230;</string>
    <string name="take_photo">Take Photo</string>
    <string name="button_skip">Skip</string>
    <string name="slide_1_text">One spot for your company\'s photos and videos</string>
    <string name="slide_2_text">Collaborate with colleagues and clients</string>
    <string name="slide_3_text">Securely and painlessly organize and share</string>
    <string name="menu_camera">Take a photo</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_share">Share</string>
    <string name="menu_share_email">E-Mail</string>
    <string name="menu_share_twitter">Twitter</string>
    <string name="menu_share_facebook">Facebook</string>
    <string name="menu_share_system">Other System Apps…</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_select_none">Select None</string>
    <string name="menu_selection">Selection</string>
    <string name="share_private_photo_forbidden">You can\'t share private photos</string>
    <string name="share_private_photo_confirmation_question">This photo is private. Are you sure want to share it?</string>
    <string name="share_email_default_title">I\'m using Trovebox to share my moments</string>
    <string name="share_email_default_body">View the photo &lt;a href="%1$s">%1$s&lt;/a></string>
    <string name="share_email_send_title">Send E-Mail…</string>
    <string name="share_system_default_title">@string/share_email_default_title</string>
    <string name="share_system_default_body">View the photo %1$s</string>
    <string name="share_system_send_title">Share photo URL</string>
    <string name="share_twitter_requesting_authentication">Requesting twitter authentication…</string>
    <string name="share_twitter_verifying_authentication">Veryfying twitter authentication…</string>
    <string name="share_twitter_authorise_ask">Please authorize this app!</string>
    <string name="share_twitter_authorisation_question">You have not authorized Trovebox to access your Twitter account. Do you want to do it now?</string>
    <string name="share_twitter_logged_in_as">Logged in as %1$s</string>
    <string name="share_twitter_send_tweet">Post a Tweet</string>
    <string name="share_twitter_dialog_title">Twitter share</string>
    <string name="share_twitter_logout">Sign out</string>
    <string name="share_twitter_default_msg">%1$s shared via @trovebox</string>
    <string name="share_twitter_default_with_title_msg">%1$s %2$s shared via @trovebox</string>
    <string name="share_twitter_success_message">Photo has been shared successfully</string>
    <string name="share_twitter_success_setup_message">Twitter was successfully set up</string>
    <string name="share_facebook_authorise_ask">Please authorize this app!</string>
    <string name="share_facbook_authorisation_question">You have not authorized Trovebox to access your Facebook account or authorization expired. Do you want to do it now?</string>
    <string name="share_facbook_action_canceled">Action canceled</string>
    <string name="share_facebook_success_setup_message">Facebook was successfully set up</string>
    <string name="share_facebook_photo">Share Photo</string>
    <string name="share_facebook_default_action">Shared via Trovebox</string>
    <string name="share_facebook_default_caption">Some caption</string>
    <string name="share_facebook_default_description">Trovebox is the easiest way to share, enjoy and organize your photos using Dropbox, Box.net or Amazon S3</string>
    <string name="share_facebook_success_message">Photo has been shared successfully</string>
    <string name="share_facebook_share_canceled_message">Update status cancelled</string>
    <string name="share_facebook_no_wall_post_made">No wall post made</string>
    <string name="share_facebook_dialog_title">Facebook share</string>
    <string name="share_facebook_logged_in_as">Logged in as %1$s</string>
    <string name="hint_server">username.trovebox.com</string>
    <string name="login">Login</string>
    <string name="get_trovebox_account">Get a Trovebox account</string>
    <string name="logging_in_message">Please wait. Logging you in…</string>
    <string name="signup_message">Please wait. Registering new user…</string>
    <string name="tab_home">Home</string>
    <string name="tab_gallery">Gallery</string>
    <string name="tab_tags">Tags</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_sync">Sync</string>
    <string name="tab_account">Account</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_preferences">Preferences</string>
    <string name="uploading_in_background">Your upload has been started</string>
    <string name="upload_camera_option">Camera</string>
    <string name="upload_gallery_option">Gallery</string>
    <string name="upload_title">Upload</string>
    <string name="upload_title_hint">Title</string>
    <string name="upload_tags">Tags</string>
    <string name="upload_albums">Albums</string>
    <string name="upload_select_tags">Select Tags</string>
    <string name="upload_select_tags_finish">Finish</string>
    <string name="upload_description">Description</string>
    <string name="upload_private">Private</string>
    <string name="upload_share_facebook">Facebook</string>
    <string name="upload_share_twitter">Twitter</string>
    <string name="upload_upload_original">Upload Original</string>
    <string name="upload_button">Upload!</string>
    <string name="upload_pick_photo_first">Please pick a photo first</string>
    <string name="upload_image_edit_button">Crop &amp; effects</string>
    <string name="original_upload_extra_tag">Original</string>
    <string name="tags_view_in_gallery">View tagged photos</string>
    <string name="title_activity_select_tags">Select Tags</string>
    <string name="title_activity_select_albums">Select Albums</string>
    <string name="sync_next_button">Next</string>
    <string name="sync_previous_button">Back</string>
    <string name="sync_please_pick_at_least_one_photo">Please pick at least one photo first!</string>
    <string name="sync_show_all">Show all</string>
    <string name="sync_uploaded">UPLOADED!</string>
    <string name="notification_uploading_photo">Uploading %1$s</string>
    <string name="notification_upload_failed_title">Upload failed</string>
    <string name="notification_upload_failed_title_with_reason">Upload failed: %1$s</string>
    <string name="notification_upload_failed_text">%1$s</string>
    <string name="notification_upload_success_title">Upload finished</string>
    <string name="notification_upload_skipped_title">Upload skipped. Found same photo on the server.</string>
    <string name="notification_upload_success_text">%1$s</string>
    <string name="notification_upload_multiple_title">Successfull upload</string>
    <string name="notification_upload_multiple_text">Uploaded: %1$d; skipped: %2$d</string>
    <string name="notification_upload_multiple_details">Upload details</string>
    <string name="notification_upload_multiple_detail_skipped"><![CDATA[<b>%1$s</b> skipped]]></string>
    <string name="notification_upload_multiple_detail_done"><![CDATA[<b>%1$s</b> done]]></string>
    <string name="noInternetAccess">Internet connection is not available</string>
    <string name="newest_this_photo_was_taken">This photo was taken %1$d %2$s ago.</string>
    <string name="newest_this_photo_was_taken_less_one_hour">This photo was taken less than one hour ago.</string>
    <string name="havent_uploaded_any_photos">Hmm, you haven\'t uploaded any photos.</string>
    <string name="use_sync_to_start">Use the sync tab to start!</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pleaseSpecifyFirst">Please specify %1$s first!</string>
    <string name="logOut">Sign out</string>
    <string name="areYouSureQuestion">Are you sure?</string>
    <string name="external_storage_na_message">sdcard is missing or currently not mounted. Cannot continue.</string>
    <string name="action_not_supported_on_os_version">This action is not supported on your device OS version.</string>
    <string name="upload_limit_reached_message">The free upload limit is reached.</string>
    <string name="upload_limit_reached_with_reset_message">The free upload limit is reached. Please upgrade to Pro or wait until it will reset at %1$s</string>
    <string name="upload_limit_for_multiple_upload_reached_message">You\'ve selected to upload %1$d photos but the remaining free uploading limit for your account is %2$d. Please select the number of photos which feets the limit or upgrade to Pro.</string>
    <string name="autoupload_ignored">Automatic upload ignored.</string>
    <string name="errorWithAuthentication">Error with authentication</string>
    <string name="errorSimple">Error: %1$s</string>
    <string name="errorCouldNotUploadTakenPhoto">Could not upload the photo taken</string>
    <string name="errorVerifyingTheResponse">Error while verifying the response</string>
    <string name="errorWithTwitterAuthentication">Error with twitter authentication</string>
    <string name="errorCouldNotLoadNextPhotosInList">Could not load next photos in list</string>
    <string name="errorCouldNotLogin">Could not login</string>
    <string name="errorCouldNotSignup">Could not signup</string>
    <string name="errorCouldNotLoadNextAlbumsInList">Could not load next albums in list</string>
    <string name="errorCouldNotUseIntentsToOpenMaps">Could not use Intent to open maps</string>
    <string name="errorCouldNotGetAlbum">Could not get album</string>
    <string name="errorCouldNotGetPhoto">Could not get photo</string>
    <string name="errorCouldNotDeletePhoto">Could not delete photo</string>
    <string name="errorCouldNotUpdatePhoto">Could not update photo details</string>
    <string name="errorCouldNotCreateAlbum">Could not create album</string>
    <string name="errorCouldNotGetShareToken">Could not get share token</string>
    <string name="errorOccured">Error occurred</string>
    <string name="errorCouldNotLoadNextTagsInList">Could not load next tags in list</string>
    <string name="errorCouldNotInitTwitterFragment">Could not init twitter fragment</string>
    <string name="errorCouldNotRetrieveTwitterScreenName">Could not retrieve twitter screen name</string>
    <string name="errorCouldNotSendTweet">Could not send tweet</string>
    <string name="account_google_login_button"><![CDATA[Connect using <b>Google</b> login]]></string>
    <string name="account_signup_button">Sign up with your email</string>
    <string name="account_login_button">Sign in with your email</string>
    <string name="account_own_server_button">Using your own domain?</string>
    <string name="account_create_button">Create Account</string>
    <string name="account_forgot_password_button">Forgot password?</string>
    <string name="sign_in_instructions"><![CDATA[<b>Enter</b> an email, password and hit <b>Login</b>]]></string>
    <string name="password_recovery_instructions">Enter your email to recover your password</string>
    <string name="instant_sign_in_instructions"><![CDATA[<b>Sign up</b> or <b>sign in</b> with a single tap]]></string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_username">username</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="photo_edit_save_button">Save</string>
</resources>