<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:padding="@dimen/site_padding" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upload_title_hint"
                android:inputType="textCapWords" >
            </EditText>

            <EditText
                android:id="@+id/edit_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upload_tags"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/select_tags"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_select_tags" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/upload_description"
                android:inputType="textMultiLine|textCapSentences|textLongMessage"
                android:minLines="3"
                android:visibility="gone" />

            <org.holoeverywhere.widget.Switch
                android:id="@+id/private_switch"
                style="@style/YesNoSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/upload_private" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photo_edit_save_button" />

</LinearLayout>